
* Version 4.0pre4

+ Enhancements

- Firewall plugin integrated into editor core
- Global Options dialog box now has an 'Overview' page
- When running on Java 2 version 1.4, any JAR files named "jaxp.jar" are
  ignored; on other Java versions, they are loaded. The next version of
  the XML plugin will split xerces.jar into xerces.jar and jaxp.jar; so
  it should work better on Java 1.4.

+ Bug Fixes

- Next-fold command was slightly broken
- Fixed possible plugin manager NPE when installing incompatible plugins
- The 'select text on focus' feature of some text fields should work on
  JDK 1.4 now
- On some Java versions, the plugin manager's progress windows would
  hang until explicitly given focus
- File system browser's type select should work on JDK 1.4 now

* Version 4.0pre3

jEdit now requires Java 2 version 1.3 or later! Java 2 version 1.2 and
Java 1.1 can no longer be used to run jEdit.

+ New Features

- Two-stage save (where a file is first saved to #filename#save#, then
  renamed to the actual file name) can be disabled in the 'Loading and
  Saving' option pane
- -noplugins command line switch added
- Added option to have backups created on every save (default is to only
  create one backup for each file, until it is closed)
  (Ollie Rutherfurd)
- 'Extra word characters' setting added to Editing option pane
- 'Range Comment' and 'Line Comment' commands now behave correctly when,
  for example, inserting comments in inline JavaScript in an HTML file.
  - The new Buffer.getContextSensitiveProperty() method first checks the
    properties of the parser rule set at the specified offset; then the
    edit mode that contains that rule set; and finally, the edit mode of
    the buffer itself.
  - In mode files, you can now place a PROPS element inside a RULES
    element to define ruleset-specific properties. Currently, only the
    'commentStart', 'commentEnd' and 'lineComment' properties can be
    ruleset-specific.